--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         }
     </style>
 </head>
-<body class="bg-gradient-to-br from-slate-950 via-blue-950 to-slate-900 min-h-screen circuit-bg">
+<body class="bg-gradient-to-br from-slate-50 via-sky-50 to-slate-100 min-h-screen circuit-bg">
     
     <!-- Success Message -->
     <div id="successMessage" class="hidden min-h-screen flex items-center justify-center p-4">
@@ -943,3 +943,4 @@
     </script>
 </body>
 </html>
+
